sr experiments: add q function metric for q-table agent

--- a/hima/experiments/successor_representations/configs/metrics/q/gridworld.yaml
+++ b/hima/experiments/successor_representations/configs/metrics/q/gridworld.yaml
@@ -43,7 +43,7 @@ trajectory:
     update_step: steps
     update_period: 1
     log_step: episodes
-    log_period: 50
+    log_period: 100
 
 value_function:
   class: Histogram
@@ -54,4 +54,15 @@ value_function:
     update_step: steps
     update_period: 1
     log_step: episodes
-    log_period: 50
+    log_period: 100
+
+q_function:
+  class: Histogram
+  params:
+    name: agent/q_function
+    att: q_value
+    normalized: true
+    update_step: steps
+    update_period: 1
+    log_step: episodes
+    log_period: 100
