--- a/hima/experiments/successor_representations/configs/runner/gridworld.yaml
+++ b/hima/experiments/successor_representations/configs/runner/gridworld.yaml
@@ -2,16 +2,16 @@ log: True
 project_name: gridworld_test_new_runner
 run_tag: null
 
-n_episodes: 11
+n_episodes: 501
 update_start: 0
-max_steps: 10
-reward_free: False
+max_steps: 50
+reward_free: 100  # random strategy pretrain for each setup
 action_inertia: 1
-frame_skip: 10
+frame_skip: 0
 strategies: null
 
-setups: [room3, room4]
-setup_period: 5
+setups: [two_rooms]
+setup_period: [501]
 
 env_conf: 'configs/environment/gridworld/mdp.yaml'
 agent_conf: 'configs/agent/bio/gridworld.yaml'
