--- a/hima/experiments/successor_representations/configs/runner/pinball.yaml
+++ b/hima/experiments/successor_representations/configs/runner/pinball.yaml
@@ -2,17 +2,13 @@ log: False
 project_name: pinball_test_new_runner
 run_tag: null
 
-n_episodes: 11
-update_start: 0
-max_steps: 15
-reward_free: False  # random strategy
 action_inertia: 3  # how many steps repeat action
 frame_skip: 0  # force frame skipping
 strategies: null
 
-setups: [fork_rew1, fork_rew2]
-setup_period: [5, 7]
+setup: empty
 
+scenario: 'configs/scenario/pinball.yaml'
 env_conf: 'configs/environment/pinball/default.yaml'
 agent_conf: 'configs/agent/bio/pinball.yaml'
 metrics_conf: 'configs/metrics/bio/pinball.yaml'
