--- a/hima/experiments/successor_representations/configs/scenario/gridworld.yaml
+++ b/hima/experiments/successor_representations/configs/scenario/gridworld.yaml
@@ -1,4 +1,4 @@
-- condition: ['episodes', 'equal', 2000, 'norepeat']
+- condition: ['episodes', 'equal', 1000, 'norepeat']
   check_every: 'episodes'
   action: stop_runner
   params: {}
@@ -10,31 +10,15 @@
   check_every: 'episodes'
   action: switch_logging
   params: {}
-- condition: ['episodes', 'equal', 0, 'norepeat']
-  check_every: 'episodes'
-  action: switch_strategy
-  params:
-    strategy: random
-- condition: ['episodes', 'equal', 1500, 'norepeat']
-  check_every: 'episodes'
-  action: switch_strategy
-  params:
-    strategy: non-random
-- condition: ['episodes', 'equal', 0, 'norepeat']
-  check_every: 'episodes'
-  action: set_learning
-  params:
-    memory: true
-    striatum: false
-- condition: ['episodes', 'equal', 500, 'norepeat']
-  check_every: 'episodes'
-  action: set_learning
-  params:
-    memory: false
-    striatum: true
-- condition: ['episodes', 'equal', 1000, 'norepeat']
-  check_every: 'episodes'
-  action: change_setup
-  params:
-    setup: room1
-    setup_id: 0
+#- condition: ['episodes', 'equal', 0, 'norepeat']
+#  check_every: 'episodes'
+#  action: change_setup
+#  params:
+#    setup: room1
+#    setup_id: 0
+#- condition: ['episodes', 'equal', 500, 'norepeat']
+#  check_every: 'episodes'
+#  action: change_setup
+#  params:
+#    setup: room2
+#    setup_id: 1
