--- a/hima/experiments/temporal_pooling/configs/new_tm.yaml
+++ b/hima/experiments/temporal_pooling/configs/new_tm.yaml
@@ -3,6 +3,7 @@ project: stp.new_tm.test_text
 log: True    # wandb logging, use 'dry' for dummy do-nothing logging to test metrics collection
 
 seed: 1313
+reset_tm: False
 iterate:
   _base_: iterate_setups.small_10k
 
@@ -47,14 +48,17 @@ model:
     - epoch
     - epoch_finished
     - tracking_enabled
+    - learn
   pipeline:
-    - input.sdr -> SE.feedforward.sdr
-    - SE.compute()
-    - SE.output.sdr -> TM.feedforward.sdr
+#    - input.sdr -> SE.feedforward.sdr
+#    - SE.compute()
+#    - SE.output.sdr -> TM.feedforward.sdr
+    - input.sdr -> TM.feedforward.sdr
     - compute TM:
       - TM.predict()
-      - TM.set_predicted_cells()
-      - TM.activate()
+      - TM.compute()
+      - TM.compare_with_prediction()
+    - TM.active_cells.sdr -> TM.state.sdr
     - TM.correctly_predicted_cells.sdr -> output.sdr
 #  track_smoothing:
   track:
@@ -88,14 +92,20 @@ model:
         sequence_started: epoch
         sdr_updated: AA.feedforward.sdr
         sequence_finished: epoch_finished
-    - name: TM
-      tracker: trackers.tm
-      on:
-        activate: TM.active_cells.sdr
+#    - name: TM
+#      tracker: trackers.tm
+#      on:
+#        activate: TM.active_cells.sdr
     - name: AA
       tracker: trackers.tm
       on:
         activate: AA.active_cells.sdr
+    - name: output
+      tracker: trackers.sdr
+      on:
+        sequence_started: epoch
+        sdr_updated: output.sdr
+        sequence_finished: epoch_finished
 
 track_streams:
   input.sdr:
@@ -208,6 +218,21 @@ TM:
     predicted_segment_decrement_basal: 0.004
     max_synapses_per_segment_basal: 2.1
     max_segments_per_cell_basal: 16
+  tm_new:
+    _base_: $_base.spatial_pooler.default
+#    _type_: sp.vectorized
+    _type_: sp.float
+#    _type_: sp.sdrr
+    initial_max_rf_sparsity: 0.5
+    target_rf_to_input_ratio: 2.0
+    learning_rate: 0.02
+    newborn_pruning_cycle: 3.0
+    newborn_pruning_stages: 20
+    newborn_pruning_mode: powerlaw
+    prune_grow_cycle: 100.0
+    adapt_to_ff_sparsity: False
+    boosting_k: 0.5
+#    output_mode: binary
   lstm:
     _type_: tm.lstm
     seed: ???
