fix default TM streams; fix recently added type casting in SdrConcatenator

--- a/hima/experiments/temporal_pooling/configs/_base.yaml
+++ b/hima/experiments/temporal_pooling/configs/_base.yaml
@@ -90,6 +90,7 @@ blocks:
   tm_like:
     active_cells_sds: ???
     predicted_cells_sds: ???
+    correctly_predicted_cells_sds: ???
     tm: ???
 
 models:
