--- a/hima/experiments/temporal_pooling/configs/neurogenesis.yaml
+++ b/hima/experiments/temporal_pooling/configs/neurogenesis.yaml
@@ -5,19 +5,15 @@ log: True    # wandb logging, use 'dry' for dummy do-nothing logging to test met
 seed: 42
 binary: true
 
-input_sds: [200, 10]
-output_sds: [200, 10]
+input_sds: [400, 12]
+output_sds: [400, 12]
 
-n_prototypes: 10
-noise_level: 0.0
-n_samples: 100
+n_prototypes: 400
+noise_level: 0.1
+n_epochs: 10
+n_steps: 1000
 
-layer: sp.vec
-
-train:
-  _base_: train_setups.small
-test:
-  _base_: test_setups.small
+layer: sp.rate
 
 sp:
   base:
@@ -48,21 +44,6 @@ sp:
 
   htm:
     _type_: sp.htm
-
-train_setups:
-  full:
-    n_epochs: 20
-    n_steps: 1000
-  mid:
-    n_epochs: 10
-    n_steps: 1000
-  small:
-    n_epochs: 2
-    n_steps: 1000
-
-test_setups:
-  small:
-    items_per_class: 20
 
 wandb_init:
   _base_: $_base.wandb_init
