--- a/hima/experiments/temporal_pooling/configs/new_tm.yaml
+++ b/hima/experiments/temporal_pooling/configs/new_tm.yaml
@@ -258,6 +258,7 @@ TM:
     _base_: $_base.spatial_pooler.default
 #    _type_: sp.float
     _type_: sp.sdrr
+    initial_rf_to_input_ratio: 100.0
     initial_max_rf_sparsity: 0.5
     target_rf_to_input_ratio: 0.75
     learning_rate: 0.02
