--- a/hima/experiments/temporal_pooling/configs/neurogenesis.yaml
+++ b/hima/experiments/temporal_pooling/configs/neurogenesis.yaml
@@ -8,13 +8,18 @@ binary: true
 input_sds: [600, 18]
 output_sds: [600, 18]
 
-n_prototypes: 1500
-noise_level: 0.2
+n_prototypes: 1000
+visible_frac: 1.0
+noise_level: 0.12
 n_epochs: 10
-n_steps: 2000
+n_steps: 3000
+
+n_seq_size: 50
+seq_logging_schedule: 5
 
 step_flush_schedule: 200
 aggregate_flush_schedule: 200
+sp_potentials_quantile: 0.12
 
 layer: sp.rate
 
