--- a/hima/experiments/temporal_pooling/configs/_base.yaml
+++ b/hima/experiments/temporal_pooling/configs/_base.yaml
@@ -333,8 +333,8 @@ spatial_pooler:
     # input
     feedforward_sds: ???
     initial_max_rf_sparsity: 0.5
-    target_max_rf_sparsity: 0.25
     initial_rf_to_input_ratio: 10.0
+    target_max_rf_sparsity: 0.25
     target_rf_to_input_ratio: 3.0
     # output
     output_sds: ???
@@ -342,10 +342,31 @@ spatial_pooler:
     learning_rate: 0.01
     newborn_pruning_cycle: 4.0
     newborn_pruning_stages: 20
-    newborn_pruning_mode: linear
+    newborn_pruning_mode: powerlaw
     prune_grow_cycle: 200.0
     adapt_to_ff_sparsity: False
     boosting_k: 0.5
+  default_layer:
+    _type_: sp.layer
+    _base_: default
+    # input
+    initial_max_rf_sparsity: 0.1
+    initial_rf_to_input_ratio: 5.0
+    target_max_rf_sparsity: 0.1
+    target_rf_to_input_ratio: 0.5
+    # learning
+    learning_rate: 0.01
+    newborn_pruning_cycle: 10.0
+    newborn_pruning_stages: 5
+    newborn_pruning_mode: powerlaw
+    prune_grow_cycle: 20.0
+    adapt_to_ff_sparsity: False
+    boosting_k: 0.25
+    # new params
+    output_mode: binary
+    learning_algo: new
+    normalize_rates: true
+    connectable_ff_size: ???
 
 
 spatial_temporal_pooler:
