--- a/hima/experiments/temporal_pooling/configs/neurogenesis.yaml
+++ b/hima/experiments/temporal_pooling/configs/neurogenesis.yaml
@@ -29,6 +29,7 @@ sp:
   base:
     _base_: $_base.spatial_pooler.default
     initial_max_rf_sparsity: 0.5
+    initial_rf_to_input_ratio: 100.0
     target_rf_to_input_ratio: 0.75
     learning_rate: 0.02
     newborn_pruning_cycle: 20.0
@@ -41,9 +42,11 @@ sp:
   layer:
     _base_: base
     _type_: sp.layer
-#    initial_rf_to_input_ratio: 0.75
-#    initial_max_rf_sparsity: 0.08
+    initial_rf_to_input_ratio: 10.0
+    initial_max_rf_sparsity: 0.1
 #    initial_weight_noise: 0.0001
+    newborn_pruning_cycle: 10.0
+    newborn_pruning_stages: 5
     prune_grow_cycle: 30.0
     output_mode: binary
     learning_algo: new
