--- a/hima/experiments/temporal_pooling/configs/new_tm.yaml
+++ b/hima/experiments/temporal_pooling/configs/new_tm.yaml
@@ -192,7 +192,32 @@ models:
         - TM.state.sdr -> decoder.feedforward.sdr
         - decoder.decode()
         - decoder.output.sdr -> input_posterior_prediction.sdr
+#        - decoder.learn()
+
+  STM1_att:
+    - predict input w/ prior belief on 1st iter than bootstrap using prediction as input:
+        - TM.reset_ff()
+        - repeat: 2
+          do:
+            - TM.predict()
+            - TM.predicted_cells.sdr -> decoder.feedforward.sdr
+            - decoder.decode()
+            - decoder.output.sdr -> TM.feedforward.sdr
+    - decoder.output.sdr -> input_prediction.sdr
+    - embed input:
+        - input.sdr -> embed_input.sdr
+    - compute TM:
+        - embed_input.sdr -> TM.feedforward.sdr
+        - TM.compute()
+        - TM.compare_with_prediction()
+        - TM.active_cells.sdr -> TM.state.sdr
+    - learn decoder:
+        - embed_input.sdr -> decoder.feedback.sdr
         - decoder.learn()
+    - predict input w/ posterior belief:
+        - TM.state.sdr -> decoder.feedforward.sdr
+        - decoder.decode()
+        - decoder.output.sdr -> input_posterior_prediction.sdr
 
   STM2:
     - predict input w/ prior belief:
@@ -225,7 +250,7 @@ models:
         - concat.output.sdr -> decoder.feedforward.sdr
         - decoder.decode()
         - decoder.output.sdr -> input_posterior_prediction.sdr
-        - decoder.learn()
+#        - decoder.learn()
 
 SE:
   sp:
@@ -269,6 +294,7 @@ TM:
   tm_new:
     _base_: $_base.spatial_pooler.default
 #    _type_: sp.float
+#    _type_: sp.sdrr
     _type_: sp.sdrr
     initial_rf_to_input_ratio: 100.0
     initial_max_rf_sparsity: 0.5
@@ -282,6 +308,21 @@ TM:
     boosting_k: 0.2
     output_mode: rate
     learning_algo: new
+  tm_new2:
+    _base_: $_base.spatial_pooler.default_layer
+    initial_rf_to_input_ratio: 5.0
+    initial_max_rf_sparsity: 0.1
+    target_rf_to_input_ratio: 0.75
+    learning_rate: 0.01
+    newborn_pruning_cycle: 10.0
+    newborn_pruning_stages: 5
+    newborn_pruning_mode: powerlaw
+    prune_grow_cycle: 20.0
+    adapt_to_ff_sparsity: False
+    boosting_k: 0.25
+    output_mode: binary
+    learning_algo: new
+    normalize_rates: true
   lstm:
     _type_: tm.lstm
     seed: ???
